<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yiblr</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="new_alarm">New</string>
    <string name="delete">Delete</string>
    <string name="AlarmList_footer">Some random amazing text! </string>
    <string name="AlarmList_add">Add alarm</string>
    <string name="AlarmEdit_done">Done</string>
    <string name="AlarmEdit_bio">Use our fancy bio feature</string>
    <string name="AlarmEdit_description">Description...</string>
    <string name="AlarmEdit_sound">Set alarm sound</string>
<<<<<<< HEAD
=======

>>>>>>> origin/master
    <string name="title_activity_alarm_details">AlarmDetailsActivity</string>
    <string name="details_alarm_name">Alarm Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>
    <string name="title_activity_alarm_screen">AlarmScreenActivity</string>
    <string name="title_activity_sleep_alarm">SleepAlarmActivity</string>
    <string name="title_activity_time_select">TimeSelectActivity</string>
    <string name="title_activity_awake_alarm">AwakeAlarmActivity</string>
    <string name="title_activity_time_select_awake">TimeSelectAwakeActivity</string>
<<<<<<< HEAD
    <string name="activate">Activate</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
=======


>>>>>>> origin/master

</resources>
