<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:paddingTop="16sp"
        tools:context=".AlarmDetailsActivity"
        android:background="@color/background_floating_material_dark">

        <TimePicker
            android:id="@+id/alarm_details_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/alarm_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alarm_details_time_picker"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/details_alarm_name"
            android:layout_alignRight="@+id/divider2"
            android:layout_alignEnd="@+id/divider2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/background_floating_material_light"
            android:textColorHighlight="@color/background_floating_material_light"
            android:textAppearance="@color/background_floating_material_light" />

        <View
            android:id="@+id/divider2"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_name" />

        <TextView
            android:id="@+id/alarm_details_label_repeat_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider2"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/details_repeat_weekly"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/background_floating_material_light" />

        <View
            android:id="@+id/divider1"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_label_repeat_weekly" />

        <CheckBox
            android:id="@+id/alarm_details_repeat_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/alarm_details_label_repeat_weekly"
            android:layout_alignBottom="@+id/alarm_details_label_repeat_weekly"
            android:layout_alignRight="@+id/divider1"
            android:checked="true" />

        <TextView
            android:id="@+id/alarm_details_label_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/divider1"
            android:layout_below="@+id/divider1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/details_sunday"
            android:textColor="@color/background_floating_material_light"/>

        <TextView
            android:id="@+id/alarm_details_label_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/alarm_details_label_sunday"
            android:layout_below="@+id/alarm_details_repeat_sunday"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/background_floating_material_light"
            android:text="@string/details_monday" />

        <TextView
            android:id="@+id/alarm_details_label_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_label_monday"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/background_floating_material_light"
            android:text="@string/details_tuesday" />

        <TextView
            android:id="@+id/alarm_details_label_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_label_tuesday"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/details_wednesday"
            android:textColor="@color/background_floating_material_light" />

        <TextView
            android:id="@+id/alarm_details_label_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_label_wednesday"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/background_floating_material_light"
            android:text="@string/details_thursday" />

        <TextView
            android:id="@+id/alarm_details_label_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_label_thursday"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/background_floating_material_light"
            android:text="@string/details_friday" />

        <TextView
            android:id="@+id/alarm_details_label_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_label_friday"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/details_saturday" />

        <View
            android:id="@+id/divider4"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_label_saturday" />

        <CheckBox
            android:id="@+id/alarm_details_repeat_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/alarm_details_label_wednesday"
            android:layout_alignBottom="@+id/alarm_details_label_wednesday"
            android:layout_alignParentRight="true"
            android:checked="true" />

        <CheckBox
            android:id="@+id/alarm_details_repeat_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/alarm_details_label_sunday"
            android:layout_alignBottom="@+id/alarm_details_label_sunday"
            android:layout_alignParentRight="true"
            android:checked="true" />

        <CheckBox
            android:id="@+id/alarm_details_repeat_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/alarm_details_label_monday"
            android:layout_alignBottom="@+id/alarm_details_label_monday"
            android:layout_alignParentRight="true"
            android:checked="true" />

        <CheckBox
            android:id="@+id/alarm_details_repeat_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/alarm_details_label_tuesday"
            android:layout_alignBottom="@+id/alarm_details_label_tuesday"
            android:layout_alignParentRight="true"
            android:checked="true" />

        <CheckBox
            android:id="@+id/alarm_details_repeat_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/alarm_details_label_thursday"
            android:layout_alignBottom="@+id/alarm_details_label_thursday"
            android:layout_alignParentRight="true"
            android:checked="true" />

        <CheckBox
            android:id="@+id/alarm_details_repeat_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/alarm_details_label_friday"
            android:layout_alignBottom="@+id/alarm_details_label_friday"
            android:layout_alignParentRight="true"
            android:checked="true" />

        <CheckBox
            android:id="@+id/alarm_details_repeat_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/alarm_details_label_saturday"
            android:layout_alignBottom="@+id/alarm_details_label_saturday"
            android:layout_alignParentRight="true"
            android:checked="true" />

        <LinearLayout
            android:id="@+id/alarm_ringtone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider4"
            android:background="@drawable/view_touch_selector"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarm_label_tone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/details_alarm_tone"
                android:textSize="18sp"
                android:textColor="@color/background_floating_material_light" />

            <TextView
                android:id="@+id/alarm_label_tone_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/details_alarm_tone_default"
                android:textSize="14sp"
                android:textColor="@color/background_floating_material_light" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_ringtone_container" />
    </RelativeLayout>

</ScrollView>